--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://Killian0812.github.io/portfolio",
-  "name": "portfolio",
+  "homepage": "http://Killian0812.github.io/profile",
+  "name": "profile",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
