--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "three": "^0.180.0"
   },
   "scripts": {
     "start": "react-scripts start",
